--- a/src/components/SectionTitle/SectionTitle.scss
+++ b/src/components/SectionTitle/SectionTitle.scss
@@ -10,3 +10,15 @@
   line-height: 27px;
   letter-spacing: -0.04em;
 }
+
+.type_student {
+  margin: 0 0 20px 0;
+  padding-bottom: 19px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 50px;
+  letter-spacing: -0.04em;
+  color: #ffffff;
+}
