--- a/src/components/Student/Student.scss
+++ b/src/components/Student/Student.scss
@@ -1,8 +1,75 @@
 .student {
   background-color: #000;
+  padding: 0 0 125px 0;
 
   &__inner {
     max-width: 1140px;
     margin: 0 auto;
+  }
+
+  &__wrapper {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__text-wrapper {
+    display: flex;
+    max-width: 600px;
+    flex-direction: column;
+    row-gap: 26px;
+  }
+
+  &__title {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 50px;
+    line-height: 58px;
+    letter-spacing: -0.04em;
+    color: #ffffff;
+    margin: 0;
+  }
+
+  &__subtitle {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 20px;
+    color: #ffffff;
+    mix-blend-mode: normal;
+    margin: 0;
+  }
+
+  &__description {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+    color: #ffffff;
+    mix-blend-mode: normal;
+    margin: 0;
+  }
+
+  &__project {
+    margin: 0;
+    padding: 0;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 20px;
+    list-style: none;
+    color: #a0a0a0;
+    mix-blend-mode: normal;
+
+    li:first-of-type {
+      margin-top: 50px;
+    }
+  }
+
+  &__link {
+    text-decoration: none;
   }
 }
