--- a/src/components/Techs/TechsButton/TechsButton.scss
+++ b/src/components/Techs/TechsButton/TechsButton.scss
@@ -5,6 +5,26 @@
   width: 90px;
   height: 60px;
 
+  .img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: contain;
+    object-position: center;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    transition: opacity 0.7s ease, visibility 0.3s;
+    transform: rotateY(0.5turn);
+
+    &_active {
+      opacity: 1;
+      cursor: pointer;
+      visibility: visible;
+    }
+  }
+
   &_clicked {
     transform: rotateY(0.5turn);
   }
@@ -35,6 +55,7 @@
 }
 
 .techs__back {
+  position: relative;
   padding: 10px;
   display: flex;
   justify-content: center;
@@ -44,6 +65,8 @@
   transform: rotateY(0.5turn);
   background-color: #161616;
   color: #fff;
+  margin: 0;
+  top: 60px;
 
   &:hover {
     background-color: #161616;
