--- a/src/components/Main/Promo/Promo.scss
+++ b/src/components/Main/Promo/Promo.scss
@@ -1,11 +1,15 @@
-.header {
+.promo {
   min-height: 598px;
-  max-width: 1280px;
-  margin: 0 auto;
-  background-image: url('../../images/bg-pic-header.png');
+  background-color: #f3c1f8;
+  background-image: url('./images/bg-pic-header.png');
   background-repeat: no-repeat;
   background-position: center;
   background-size: 320px 320px;
+
+  &__inner {
+    max-width: 1280px;
+    margin: 0 auto;
+  }
 
   &__wrapper {
     display: flex;
