--- a/src/components/Films/Form/Form.scss
+++ b/src/components/Films/Form/Form.scss
@@ -5,28 +5,57 @@
     margin: 0 auto;
     max-width: 1140px;
     padding: 70px 0;
+    border-bottom: 1px solid #E8E8E8;
   }
-}
 
-.form {
-  position: relative;
+  &__form {
+    position: relative;
+    width: 100%;
+  }
 
   &__input {
-    width: 100%;
+    width: calc(100% - 61px);
     background: #F9F9F9;
     border-radius: 9px;
     height: 72px;
+    margin: 0;
+    border: none;
+    padding: 0 0 0 61px;
+  }
+
+  &__image {
+    position: absolute;
+    background-image: url("./lupa.svg");
+    width: 34px;
+    height: 34px;
+    background-repeat: no-repeat;
+    background-position: center;
+    top: 19px;
+    left: 19px;
   }
 
   &__btn {
     position: absolute;
     top: 19px;
     right: 257px;
-    background: #000000;
+    background-color: #000000;
     border-radius: 48px;
     width: 80px;
     height: 34px;
     border: none;
+    background-image: url('./searchbtn.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 1px;
+      height: 40px;
+      right: -30px;
+      bottom: -2px;
+      background-color: #E8E8E8;
+    }
   }
 
   &__text {
@@ -41,11 +70,44 @@
     right: 30px;
     margin: 0;
   }
+}
 
-  &__checkbox {
-    background: #000000;
-    border-radius: 20px;
-    width: 36px;
-    height: 20px;
-  }
+.toggler-wrapper input[type="checkbox"]:checked+.toggler-slider .toggler-knob {
+  left: calc(100% - 19px);
+}
+
+.toggler-wrapper .toggler-knob {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  left: 0;
+  top: 1px;
+  background-color: #F3C1F8;
+  border: 1px solid #F3C1F8;
+}
+
+.toggler-wrapper input[type="checkbox"] {
+  display: none;
+}
+
+.toggler-wrapper input[type="checkbox"]:checked+.toggler-slider {
+  background-color: #000;
+}
+
+.toggler-wrapper .toggler-slider {
+  background-color: #ccc;
+  position: absolute;
+  border-radius: 100px;
+  top: 26px;
+  right: 161px;
+  width: 36px;
+  height: 20px;
+  -webkit-transition: all 300ms ease;
+  transition: all 300ms ease;
+}
+
+.toggler-wrapper .toggler-knob {
+  position: absolute;
+  -webkit-transition: all 300ms ease;
+  transition: all 300ms ease;
 }
