--- a/src/components/Main/Footer/Footer.scss
+++ b/src/components/Main/Footer/Footer.scss
@@ -12,7 +12,7 @@
         padding-bottom: 20px;
         border-bottom: 1px solid #E8E8E8;
         margin: 0;
-        font-family: 'Inter';
+        font-family: 'Inter', serif;
         font-style: normal;
         font-weight: 400;
         font-size: 13px;
@@ -35,7 +35,7 @@
 
     &__link {
         text-decoration: none;
-        font-family: 'Inter';
+        font-family: 'Inter', serif;
         font-style: normal;
         font-weight: 400;
         font-size: 13px;
