--- a/src/components/Films/Card/Card.scss
+++ b/src/components/Films/Card/Card.scss
@@ -36,7 +36,7 @@
     font-weight: 500;
     font-size: 13px;
     line-height: 16px;
-    color: #FFFFFF;
+    color: #000;
   }
 
   &__duration {
