--- a/src/components/Main/Footer/Footer.scss
+++ b/src/components/Main/Footer/Footer.scss
@@ -1,6 +1,6 @@
 .footer {
-    background-color: #000;
-    color: #fff;
+    background-color: #fff;
+    color: #000;
 
     &__inner {
         max-width: 1140px;
@@ -41,7 +41,7 @@
         font-size: 13px;
         line-height: 16px;
         text-align: right;
-        color: #FFFFFF;
+        color: #000;
     }
 
     &__copyright {
