--- a/src/components/Films/Grid/Grid.scss
+++ b/src/components/Films/Grid/Grid.scss
@@ -1,6 +1,6 @@
 .grid {
   padding-top: 80px;
-  background-color: #000;
+  background-color: #fff;
 
   &__inner {
     max-width: 1140px;
@@ -27,7 +27,7 @@
     font-size: 12px;
     line-height: 15px;
     text-align: center;
-    color: #FFFFFF;
+    color: #000;
     background-color: transparent;
     border: 1px solid #E8E8E8;
     border-radius: 6px;
