--- a/src/components/Main/AboutProject/AboutProject.module.scss
+++ b/src/components/Main/AboutProject/AboutProject.module.scss
@@ -1,7 +1,7 @@
 .about {
-  background-color: #000;
+  background-color: #ffffff;
 
-  .about__inner {
+  &__inner {
     max-width: 1140px;
     margin: 0 auto;
   }
@@ -17,23 +17,23 @@
   }
 
   &__subtitle {
-    font-family: 'Inter';
+    font-family: 'Inter', serif;
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 24px;
     letter-spacing: -0.04em;
-    color: #ffffff;
+    color: #000;
     margin: 0 0 26px 0;
   }
 
   &__description {
-    font-family: 'Inter';
+    font-family: 'Inter', serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
-    color: #ffffff;
+    color: #000;
     margin: 0;
   }
 
@@ -53,7 +53,7 @@
     justify-content: center;
     align-items: center;
     margin: 0;
-    font-family: 'Inter';
+    font-family: 'Inter', serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -69,7 +69,7 @@
     justify-content: center;
     align-items: center;
     margin: 0;
-    font-family: 'Inter';
+    font-family: 'Inter', serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -78,7 +78,7 @@
   }
 
   &__text {
-    font-family: 'Inter';
+    font-family: 'Inter', serif;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
