--- a/src/components/Main/NavTab/NavTab.module.scss
+++ b/src/components/Main/NavTab/NavTab.module.scss
@@ -1,17 +1,19 @@
 .nav {
-  background-color: #000;
+  background-color: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 110px;
 
   &__wrapper {
+    width: 100%;
+    background-color: #000;
     display: flex;
+    justify-content: center;
     column-gap: 40px;
   }
 
   &__btn {
-    font-family: 'Inter';
+    font-family: 'Inter', serif;
     font-style: normal;
     font-weight: 500;
     font-size: 13px;
