--- a/src/components/Main/SectionTitle/SectionTitle.scss
+++ b/src/components/Main/SectionTitle/SectionTitle.scss
@@ -1,9 +1,10 @@
 .title {
-  color: #fff;
-  border-bottom: #fff 1px solid;
+  padding-top: 110px;
+  color: #000;
+  border-bottom: #000 1px solid;
   margin: 0 0 70px 0;
   padding-bottom: 23px;
-  font-family: 'Inter';
+  font-family: 'Inter', serif;
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
@@ -13,12 +14,13 @@
 
 .type_student {
   margin: 0 0 20px 0;
+  padding-top: 0;
   padding-bottom: 19px;
-  font-family: 'Inter';
+  font-family: 'Inter', serif;
   font-style: normal;
   font-weight: 400;
   font-size: 30px;
   line-height: 50px;
   letter-spacing: -0.04em;
-  color: #ffffff;
+  color: #000;
 }
