--- a/src/components/Main/Student/Student.scss
+++ b/src/components/Main/Student/Student.scss
@@ -1,5 +1,5 @@
 .student {
-  background-color: #000;
+  background-color: #FFFFFF;
   padding: 0 0 125px 0;
 
   &__inner {
@@ -20,34 +20,34 @@
   }
 
   &__title {
-    font-family: 'Inter';
+    font-family: 'Inter', serif;
     font-style: normal;
     font-weight: 400;
     font-size: 50px;
     line-height: 58px;
     letter-spacing: -0.04em;
-    color: #ffffff;
+    color: #000;
     margin: 0;
   }
 
   &__subtitle {
-    font-family: 'Inter';
+    font-family: 'Inter', serif;
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
     line-height: 20px;
-    color: #ffffff;
+    color: #000;
     mix-blend-mode: normal;
     margin: 0;
   }
 
   &__description {
-    font-family: 'Inter';
+    font-family: 'Inter', serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 22px;
-    color: #ffffff;
+    color: #000;
     mix-blend-mode: normal;
     margin: 0;
   }
@@ -55,7 +55,7 @@
   &__project {
     margin: 0;
     padding: 0;
-    font-family: 'Inter';
+    font-family: 'Inter', serif;
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
@@ -66,6 +66,12 @@
 
     li:first-of-type {
       margin-top: 50px;
+    }
+
+    li:last-of-type {
+      .title {
+        border-bottom: none;
+      }
     }
   }
 
