--- a/src/components/Main/Techs/Techs.scss
+++ b/src/components/Main/Techs/Techs.scss
@@ -1,6 +1,6 @@
 .techs {
-  background-color: #000;
-  padding-bottom: 110px;
+  background-color: #F5F5F5;
+  padding-bottom: 100px;
 
   &__inner {
     max-width: 1140px;
@@ -15,34 +15,34 @@
   }
 
   &__title {
-    font-family: 'Inter';
+    font-family: 'Inter', serif;
     font-style: normal;
     font-weight: 400;
     font-size: 50px;
     line-height: 58px;
     text-align: center;
     letter-spacing: -0.04em;
-    color: #ffffff;
+    color: #000;
     max-width: 600px;
     margin: 20px 0 26px 0;
   }
 
   &__subtitle {
-    font-family: 'Inter';
+    font-family: 'Inter', serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
     text-align: center;
     letter-spacing: -0.04em;
-    color: #ffffff;
+    color: #000;
     margin: 0 0 100px 0;
     max-width: 460px;
   }
 
   &__btns {
     display: flex;
-    padding: 0 0 100px 0;
+    padding: 0;
     margin: 0;
     list-style: none;
     column-gap: 10px;
