--- a/src/components/Main/Techs/TechsButton/TechsButton.scss
+++ b/src/components/Main/Techs/TechsButton/TechsButton.scss
@@ -38,7 +38,7 @@
   height: 100%;
   padding: 0;
   border-radius: 10px;
-  font-family: 'Inter';
+  font-family: 'Inter', serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -48,9 +48,11 @@
   backface-visibility: hidden;
   cursor: pointer;
   transition: all 0.7s ease;
+  border: none;
+  background-color: #E8E8E8;
 
   &:hover {
-    background-color: #f3c1f8;
+    background-color: #F3C1F8;
   }
 }
 
@@ -63,12 +65,12 @@
   width: 180px;
   height: 135px;
   transform: rotateY(0.5turn);
-  background-color: #161616;
-  color: #fff;
+  background-color: #E8E8E8;
+  color: #000;
   margin: 0;
   top: 60px;
 
   &:hover {
-    background-color: #161616;
+    background-color: #F3C1F8;
   }
 }
