mixins variables refactor

--- a/src/components/Films/Card/Card.scss
+++ b/src/components/Films/Card/Card.scss
@@ -1,3 +1,5 @@
+@import '../../../utils/variables.scss', '../../../utils/mixins.scss';
+
 .card {
   width: 270px;
 
@@ -6,48 +8,44 @@
     justify-content: space-between;
     margin: 10px 0 0;
     padding-bottom: 25px;
-    border-bottom: 1px solid #E8E8E8;
+    border-bottom: 1px solid $color-light-grey;
   }
 
   &__like {
     width: 24px;
     height: 24px;
-    background-color: #F9F9F9;
+    background-color: $color-f9;
     border-radius: 36px;
-    background-image: url("./like.svg");
+    background-image: url('./like.svg');
     background-repeat: no-repeat;
     background-position: center;
     cursor: pointer;
-    transition: transform .3s ease;
+    transition: transform 0.3s ease;
 
     &:hover {
       transform: scale(1.1);
     }
 
     &_active {
-      background-image: url("./likeActive.svg");
+      background-image: url('./likeActive.svg');
     }
   }
 
   &__description {
     margin: 0;
-    font-family: 'Inter', serif;
-    font-style: normal;
-    font-weight: 500;
+    @include font-normal($mid);
     font-size: 13px;
     line-height: 16px;
-    color: #000;
+    color: $color-black;
   }
 
   &__duration {
     margin: 6px 0 0;
-    font-family: 'Inter', serif;
-    font-style: normal;
-    font-weight: 400;
+    @include font-normal($small);
     font-size: 11px;
     line-height: 13px;
     display: flex;
     align-items: center;
-    color: #A0A0A0;
+    color: $color-grey;
   }
 }
