--- a/src/components/Main/Footer/Footer.scss
+++ b/src/components/Main/Footer/Footer.scss
@@ -1,50 +1,45 @@
+@import '../../../utils/mixins.scss', '../../../utils/variables.scss';
+
 .footer {
-    background-color: #fff;
-    color: #000;
+  background-color: $color-white;
 
-    &__inner {
-        max-width: 1140px;
-        margin: 0 auto;
-    }
+  &__inner {
+    max-width: 1140px;
+    margin: 0 auto;
+  }
 
-    &__description {
-        width: 100%;
-        padding-bottom: 20px;
-        border-bottom: 1px solid #E8E8E8;
-        margin: 0;
-        font-family: 'Inter', serif;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 13px;
-        text-align: center;
-        color: #A0A0A0;
-        line-height: 16px;
-    }
+  &__description {
+    width: 100%;
+    padding-bottom: 20px;
+    border-bottom: 1px solid $color-grey;
+    margin: 0;
+    @include font-normal($small, $color-grey);
+    font-size: 13px;
+    text-align: center;
+    line-height: 16px;
+  }
 
-    &__wrapper {
-        margin: 20px 0 0 0;
-        padding-bottom: 20px;
-        display: flex;
-        justify-content: space-between;
-    }
+  &__wrapper {
+    margin: 20px 0 0 0;
+    padding-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+  }
 
-    &__links {
-        display: flex;
-        column-gap: 20px;
-    }
+  &__links {
+    display: flex;
+    column-gap: 20px;
+  }
 
-    &__link {
-        text-decoration: none;
-        font-family: 'Inter', serif;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 13px;
-        line-height: 16px;
-        text-align: right;
-        color: #000;
-    }
+  &__link {
+    text-decoration: none;
+    @include font-normal($small);
+    font-size: 13px;
+    line-height: 16px;
+    text-align: right;
+  }
 
-    &__copyright {
-        margin: 0;
-    }
+  &__copyright {
+    margin: 0;
+  }
 }
