--- a/src/components/Main/SectionTitle/SectionTitle.scss
+++ b/src/components/Main/SectionTitle/SectionTitle.scss
@@ -1,12 +1,11 @@
+@import '../../../utils/mixins.scss', '../../../utils/variables.scss';
+
 .title {
   padding-top: 110px;
-  color: #000;
-  border-bottom: #000 1px solid;
+  border-bottom: $color-black 1px solid;
   margin: 0 0 70px 0;
   padding-bottom: 23px;
-  font-family: 'Inter', serif;
-  font-style: normal;
-  font-weight: 400;
+  @include font-normal($small);
   font-size: 22px;
   line-height: 27px;
   letter-spacing: -0.04em;
@@ -16,11 +15,8 @@
   margin: 0 0 20px 0;
   padding-top: 0;
   padding-bottom: 19px;
-  font-family: 'Inter', serif;
-  font-style: normal;
-  font-weight: 400;
+  @include font-normal($small);
   font-size: 30px;
   line-height: 50px;
   letter-spacing: -0.04em;
-  color: #000;
 }
