--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,22 +1,17 @@
-.login {
+@import '../../utils/mixins.scss', '../../utils/variables.scss';
 
+.login {
   &__caption {
-    font-family: 'Inter', serif;
-    font-style: normal;
-    font-weight: 400;
+    @include font-normal($small, $color-grey);
     font-size: 14px;
     line-height: 17px;
     text-align: center;
-    color: #A0A0A0;
 
     a {
-      font-family: 'Inter', serif;
-      font-style: normal;
-      font-weight: 400;
+      @include font-normal($small);
       font-size: 14px;
       line-height: 17px;
       text-align: center;
-      color: #000000;
       text-decoration: none;
       margin-left: 6px;
     }
@@ -24,12 +19,9 @@
 
   &__title {
     margin: 0;
-    font-family: 'Inter', serif;
-    font-style: normal;
-    font-weight: 500;
+    @include font-normal($mid);
     font-size: 24px;
     line-height: 29px;
-    color: #000000;
   }
 
   .fieldset {
@@ -47,14 +39,11 @@
     align-items: center;
 
     &__input {
-      font-family: 'Inter', serif;
-      font-style: normal;
-      font-weight: 500;
+      @include font-normal($mid);
       font-size: 13px;
       line-height: 16px;
-      color: #000000;
       border: none;
-      background-color: #F9F9F9;
+      background-color: $color-f9;
       border-radius: 8px;
       height: 46px;
       padding-left: 15px;
@@ -63,44 +52,33 @@
     &__error {
       min-height: 12px;
       margin-top: 10px;
-      font-family: 'Inter', serif;
-      font-style: normal;
-      font-weight: 400;
+      @include font-normal($small, $color-red);
       font-size: 10px;
       line-height: 12px;
-      color: #FF4062;
       opacity: 0;
-      transition: all .4s ease;
+      transition: all 0.4s ease;
 
       &_active {
         opacity: 1;
       }
     }
 
-
-
     &__label {
-      font-family: 'Inter', serif;
-      font-style: normal;
-      font-weight: 400;
+      @include font-normal($small, $color-grey);
       font-size: 10px;
       line-height: 12px;
-      color: #A0A0A0;
       margin-bottom: 10px;
     }
 
     &__button {
       width: 100%;
       height: 45px;
-      background: #000000;
+      background: $color-black;
       border-radius: 3px;
-      font-family: 'Inter', serif;
-      font-style: normal;
-      font-weight: 500;
+      @include font-normal($mid, $color-white);
       font-size: 14px;
       line-height: 17px;
       text-align: center;
-      color: #FFFFFF;
       margin-top: 69px;
       cursor: pointer;
     }
