--- a/src/pages/Profile/Profile.scss
+++ b/src/pages/Profile/Profile.scss
@@ -1,16 +1,15 @@
+@import '../../utils/mixins.scss', '../../utils/variables.scss';
+
 .profile {
   display: flex;
   flex-direction: column;
   align-items: center;
 
   &__title {
-    font-family: 'Inter', serif;
-    font-style: normal;
-    font-weight: 500;
+    @include font-normal($mid);
     font-size: 24px;
     line-height: 29px;
     text-align: center;
-    color: #000000;
     max-width: 204px;
     margin: 74px 0 123px 0;
   }
@@ -21,7 +20,7 @@
     align-items: center;
 
     fieldset:first-of-type {
-      border-bottom: 1px solid #E8E8E8;
+      border-bottom: 1px solid $color-light-grey;
       padding-bottom: 16px;
     }
 
@@ -37,35 +36,26 @@
 
     &__label {
       width: 141px;
-      font-family: 'Inter', serif;
-      font-style: normal;
-      font-weight: 500;
+      @include font-normal($mid);
       font-size: 11px;
       line-height: 13px;
-      color: #000000;
     }
 
     &__input {
-      font-family: 'Inter', serif;
-      font-style: normal;
-      font-weight: 400;
+      @include font-normal($small);
       font-size: 11px;
       line-height: 13px;
       text-align: right;
-      color: #000000;
       border: none;
       background-color: transparent;
     }
 
     &__btn {
       margin: 220px 0 16px 0;
-      font-family: 'Inter', serif;
-      font-style: normal;
-      font-weight: 400;
+      @include font-normal($small);
       font-size: 13px;
       line-height: 16px;
       text-align: center;
-      color: #000000;
       padding: 0;
       background-color: transparent;
       border: none;
@@ -75,13 +65,10 @@
   }
 
   &__btn {
-    font-family: 'Inter', serif;
-    font-style: normal;
-    font-weight: 500;
+    @include font-normal($mid, $color-red);
     font-size: 13px;
     line-height: 16px;
     text-align: center;
-    color: #FF4062;
     width: 410px;
     cursor: pointer;
     text-decoration: none;
