--- a/src/components/Films/Card/Card.scss
+++ b/src/components/Films/Card/Card.scss
@@ -1,7 +1,11 @@
 @import '../../../utils/variables.scss', '../../../utils/mixins.scss';
 
 .card {
-  width: 270px;
+  width: 100%;
+
+  img {
+    width: 100%;
+  }
 
   &__wrapper {
     display: flex;
