--- a/src/components/Films/Form/Form.scss
+++ b/src/components/Films/Form/Form.scss
@@ -5,9 +5,8 @@
 
   &__inner {
     margin: 0 auto;
+    padding: 70px;
     max-width: 1140px;
-    padding: 70px 0;
-    border-bottom: 1px solid $color-light-grey;
   }
 
   &__form {
