--- a/src/utils/mixins.scss
+++ b/src/utils/mixins.scss
@@ -9,3 +9,9 @@
   margin: 0 auto;
   padding: 0 70px;
 }
+
+@mixin inner-media-main($width: 50px, $media: 900px) {
+  @media screen and (max-width: $media) {
+    padding: 0 $width;
+  }
+}
