--- a/src/components/Main/AboutProject/AboutProject.scss
+++ b/src/components/Main/AboutProject/AboutProject.scss
@@ -5,14 +5,25 @@
 
   &__inner {
     max-width: 1140px;
-    margin: 0 auto;
-    padding: 0 70px;
+    @include inner;
+
+    @include inner-media-main;
+    @include inner-media-main(18px, 500px);
   }
 
   &__wrapper {
     display: flex;
     column-gap: 40px;
     padding-bottom: 110px;
+
+    @media screen and (max-width: 900px) {
+      padding-bottom: 90px;
+    }
+    @media screen and (max-width: 500px) {
+      flex-direction: column;
+      row-gap: 56px;
+      padding-bottom: 60px;
+    }
   }
 
   &__textColumn {
@@ -25,6 +36,12 @@
     line-height: 24px;
     letter-spacing: -0.04em;
     margin: 0 0 26px 0;
+
+    @media screen and (max-width: 500px) {
+      margin-bottom: 16px;
+      font-size: 18px;
+      line-height: 22px;
+    }
   }
 
   &__description {
@@ -32,10 +49,23 @@
     font-size: 14px;
     line-height: 20px;
     margin: 0;
+
+    @media screen and (max-width: 500px) {
+      font-size: 11px;
+      line-height: 16px;
+    }
   }
 
   &__timeWrapper {
     padding-bottom: 110px;
+
+    @media screen and (max-width: 968px) {
+      padding-bottom: 90px;
+    }
+
+    @media screen and (max-width: 500px) {
+      padding-bottom: 70px;
+    }
   }
 
   &__twoColumns {
@@ -44,6 +74,13 @@
 
   &__rightContainer {
     width: 100%;
+  }
+
+  &__leftContainer {
+    width: 228px;
+    @media screen and (max-width: 900px) {
+      width: 140px;
+    }
   }
 
   &__whiteSide {
@@ -60,12 +97,13 @@
   }
 
   &__blackSide {
-    width: 228px;
-    display: flex;
+    width: 100%;
     height: 36px;
-    background-color: $color-dark-grey;
-    justify-content: center;
+    display: flex;
     align-items: center;
+    justify-content: center;
+    background-color: $color-dark-grey;
+    text-align: center;
     margin: 0;
     font-size: 14px;
     line-height: 17px;
