--- a/src/components/Main/Footer/Footer.scss
+++ b/src/components/Main/Footer/Footer.scss
@@ -7,6 +7,9 @@
     max-width: 1140px;
     margin: 0 auto;
     padding: 0 70px;
+
+    @include inner-media-main;
+    @include inner-media-main(10px, 500px);
   }
 
   &__description {
@@ -18,6 +21,11 @@
     font-size: 13px;
     text-align: center;
     line-height: 16px;
+
+    @media screen and (max-width: 500px) {
+      font-size: 12px;
+      line-height: 15px;
+    }
   }
 
   &__wrapper {
@@ -25,11 +33,23 @@
     padding-bottom: 20px;
     display: flex;
     justify-content: space-between;
+
+    @media screen and (max-width: 500px) {
+      flex-direction: column-reverse;
+      align-items: center;
+      row-gap: 30px;
+    }
   }
 
   &__links {
     display: flex;
     column-gap: 20px;
+
+    @media screen and (max-width: 500px) {
+      flex-direction: column;
+      align-items: center;
+      row-gap: 12px;
+    }
   }
 
   &__link {
