--- a/src/components/Main/SectionTitle/SectionTitle.scss
+++ b/src/components/Main/SectionTitle/SectionTitle.scss
@@ -9,6 +9,10 @@
   font-size: 22px;
   line-height: 27px;
   letter-spacing: -0.04em;
+
+  @media screen and (max-width: 968px) {
+    padding-top: 90px;
+  }
 }
 
 .type_student {
@@ -19,4 +23,13 @@
   font-size: 30px;
   line-height: 50px;
   letter-spacing: -0.04em;
+
+  @media screen and (max-width: 900px) {
+    font-size: 28px;
+  }
+
+  @media screen and (max-width: 500px) {
+    font-size: 18px;
+    line-height: 28px;
+  }
 }
