--- a/src/components/Main/Student/Student.scss
+++ b/src/components/Main/Student/Student.scss
@@ -4,15 +4,28 @@
   background-color: $color-white;
   padding: 0 0 125px 0;
 
+  @media screen and (max-width: 900px) {
+    padding-bottom: 90px;
+  }
+
   &__inner {
     max-width: 1140px;
     margin: 0 auto;
     padding: 0 70px;
+
+    @include inner-media-main;
+    @include inner-media-main(14px, 500px);
   }
 
   &__wrapper {
     display: flex;
     justify-content: space-between;
+    column-gap: 50px;
+
+    @media screen and (max-width: 650px) {
+      flex-direction: column-reverse;
+      align-items: center;
+    }
   }
 
   &__text-wrapper {
@@ -20,6 +33,10 @@
     max-width: 600px;
     flex-direction: column;
     row-gap: 26px;
+
+    @media screen and (max-width: 500px) {
+      row-gap: 20px;
+    }
   }
 
   &__title {
@@ -28,6 +45,11 @@
     line-height: 58px;
     letter-spacing: -0.04em;
     margin: 0;
+
+    @media screen and (max-width: 900px) {
+      font-size: 40px;
+      line-height: 40px;
+    }
   }
 
   &__subtitle {
@@ -36,6 +58,11 @@
     line-height: 20px;
     mix-blend-mode: normal;
     margin: 0;
+
+    @media screen and (max-width: 900px) {
+      font-size: 12px;
+      line-height: 18px;
+    }
   }
 
   &__description {
@@ -44,11 +71,26 @@
     line-height: 22px;
     mix-blend-mode: normal;
     margin: 0;
+
+    @media screen and (max-width: 900px) {
+      font-size: 12px;
+    }
+  }
+
+  &__image {
+    max-height: 352px;
+
+    @media screen and (max-width: 650px) {
+      height: 352px;
+      width: 100%;
+      max-width: 292px;
+      margin-bottom: 40px;
+    }
   }
 
   &__project {
     margin: 0;
-    padding: 0;
+    padding: 100px 0 0 0;
     @include font-normal($small, $color-grey);
     font-size: 18px;
     line-height: 20px;
