--- a/src/components/Main/Promo/Promo.scss
+++ b/src/components/Main/Promo/Promo.scss
@@ -73,7 +73,7 @@
     max-width: 730px;
 
     @media screen and (max-width: 900px) {
-      margin: 326px 30px 342px 30px;
+      margin: 326px auto 342px auto;
     }
 
     @media screen and (max-width: 500px) {
