--- a/src/components/Films/Header/Header.scss
+++ b/src/components/Films/Header/Header.scss
@@ -23,6 +23,7 @@
     @include inner;
     display: flex;
     justify-content: space-between;
+    @include inner-media-main(30px);
 
     a {
       margin: 18px 0 0 0;
@@ -32,6 +33,10 @@
   &__nav-wrapper {
     display: flex;
     column-gap: 50px;
+
+    @media screen and (max-width: 900px) {
+      display: none;
+    }
   }
 
   &__img-description {
