--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 .App {
+  height: 100%;
   &_scroll {
     position: fixed;
     overflow-y: scroll;
@@ -8,5 +9,9 @@
   &_type_forms {
     max-width: 396px;
     margin: 0 auto;
+
+    @media screen and (max-width: 500px) {
+      max-width: 260px;
+    }
   }
 }
