--- a/src/components/Films/Burger/Burger.scss
+++ b/src/components/Films/Burger/Burger.scss
@@ -3,8 +3,10 @@
 .burger {
   width: 24px;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-  row-gap: 9px;
+  row-gap: 7px;
   margin-right: 24px;
   margin-top: 26px;
   cursor: pointer;
@@ -16,6 +18,11 @@
 
   &_hidden {
     display: none;
+  }
+
+  &_opened {
+    margin: 0;
+    padding: 26px;
   }
 
   &__line_num_one {
@@ -35,15 +42,18 @@
 
   &__line_num_one_active {
     rotate: 45deg;
-    transform: translateY(17px);
+    transform: translateY(14px);
+    margin-left: 25px;
   }
 
   &__line_num_two_active {
     opacity: 0;
+    margin-left: 25px;
   }
 
   &__line_num_three_active {
     rotate: -45deg;
-    transform: translateY(-18px);
+    transform: translateY(-14px);
+    margin-left: 25px;
   }
 }
