--- a/src/components/Films/Form/Form.scss
+++ b/src/components/Films/Form/Form.scss
@@ -3,19 +3,38 @@
 .search {
   background-color: $color-white;
 
+  &__wrapper {
+    display: flex;
+    position: absolute;
+    top: 27px;
+    right: 20px;
+    column-gap: 15px;
+    @media screen and (max-width: 600px) {
+      position: static;
+      margin: 45px 0;
+    }
+  }
+
   &__inner {
     margin: 0 auto;
     padding: 70px;
     max-width: 1140px;
 
     @media screen and (max-width: 900px) {
-      padding: 70px 30px;
+      padding: 80px 30px 0 30px;
+    }
+
+    @media screen and (max-width: 600px) {
+      padding: 80px 10px 0 10px;
     }
   }
 
   &__form {
     position: relative;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   &__input {
@@ -26,6 +45,11 @@
     margin: 0;
     border: none;
     padding: 0 0 0 61px;
+
+    @media screen and (max-width: 600px) {
+      padding: 0 0 0 19px;
+      width: calc(100% - 19px);
+    }
   }
 
   &__image {
@@ -37,6 +61,10 @@
     background-position: center;
     top: 19px;
     left: 19px;
+
+    @media screen and (max-width: 600px) {
+      display: none;
+    }
   }
 
   &__btn {
@@ -52,6 +80,10 @@
     background-position: center;
     background-repeat: no-repeat;
 
+    @media screen and (max-width: 600px) {
+      right: 19px;
+    }
+
     &::after {
       content: '';
       position: absolute;
@@ -60,6 +92,9 @@
       right: -30px;
       bottom: -2px;
       background-color: $color-light-grey;
+      @media screen and (max-width: 600px) {
+        display: none;
+      }
     }
   }
 
@@ -67,11 +102,11 @@
     @include font-normal($small);
     font-size: 13px;
     line-height: 18px;
-    color: $color-black;
-    position: absolute;
-    top: 27px;
-    right: 30px;
     margin: 0;
+
+    @media screen and (max-width: 600px) {
+      position: static;
+    }
   }
 }
 
@@ -102,14 +137,18 @@
 
 .toggler-wrapper .toggler-slider {
   background-color: $color-c;
-  position: absolute;
+  position: relative;
   border-radius: 100px;
-  top: 26px;
-  right: 161px;
   width: 36px;
   height: 20px;
   -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
+  cursor: pointer;
+
+  @media screen and (max-width: 600px) {
+    top: 0;
+    right: 0;
+  }
 }
 
 .toggler-wrapper .toggler-knob {
