--- a/src/components/Films/Header/Header.scss
+++ b/src/components/Films/Header/Header.scss
@@ -24,6 +24,15 @@
     display: flex;
     justify-content: space-between;
     @include inner-media-main(30px);
+    @include inner-media-main(10px, 600px);
+
+    &_form {
+      padding: 0;
+
+      @media screen and (max-width: 500px) {
+        justify-content: center;
+      }
+    }
 
     a {
       margin: 18px 0 0 0;
@@ -77,6 +86,10 @@
     line-height: 18px;
     text-align: right;
     text-decoration: none;
+
+    &_hidden {
+      display: none;
+    }
   }
 }
 
