--- a/src/pages/NotFound/NotFound.scss
+++ b/src/pages/NotFound/NotFound.scss
@@ -10,21 +10,34 @@
   margin: 0 auto;
 
   &__error {
-    width: 400px;
+    max-width: 400px;
     @include font-normal($small);
     font-size: 140px;
     line-height: 169px;
     text-align: center;
     margin: 246px 0 5px 0;
+
+    @media screen and (max-width: 500px) {
+      max-width: 300px;
+      font-size: 80px;
+      line-height: 97px;
+      margin: 329px 0 10px 0;
+    }
   }
 
   &__description {
-    width: 400px;
+    max-width: 400px;
     @include font-normal($small);
     font-size: 16px;
     line-height: 19px;
     text-align: center;
     margin: 0 0 184px 0;
+    @media screen and (max-width: 500px) {
+      max-width: 300px;
+      font-size: 12px;
+      line-height: 15px;
+      margin-bottom: 284px;
+    }
   }
 
   &__btn {
@@ -35,5 +48,11 @@
     border: none;
     background-color: transparent;
     margin: 0;
+    padding: 0;
+
+    @media screen and (max-width: 500px) {
+      font-size: 12px;
+      line-height: 15px;
+    }
   }
 }
