--- a/src/pages/Profile/Profile.scss
+++ b/src/pages/Profile/Profile.scss
@@ -4,6 +4,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+  height: calc(100vh - 74px);
+  @media screen and (min-width: 501px) {
+    justify-content: start;
+  }
+
+  .fieldset {
+    width: 100%;
+    display: flex;
+    border: none;
+    padding: 0;
+    justify-content: space-between;
+    margin: 0;
+  }
 
   &__title {
     @include font-normal($mid);
@@ -11,13 +25,29 @@
     line-height: 29px;
     text-align: center;
     max-width: 204px;
-    margin: 74px 0 123px 0;
+    margin: 74px auto 123px auto;
   }
 
   .form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 260px;
+
+    &__error {
+      min-height: 24px;
+      margin-top: 10px;
+      @include font-normal($small, $color-red);
+      font-size: 10px;
+      line-height: 12px;
+      opacity: 0;
+      transition: all 0.4s ease;
+      max-width: 100%;
+
+      &_active {
+        opacity: 1;
+      }
+    }
 
     fieldset:first-of-type {
       border-bottom: 1px solid $color-light-grey;
@@ -35,10 +65,11 @@
     }
 
     &__label {
-      width: 141px;
+      max-width: 141px;
       @include font-normal($mid);
       font-size: 11px;
       line-height: 13px;
+      justify-self: center;
     }
 
     &__input {
@@ -59,8 +90,11 @@
       padding: 0;
       background-color: transparent;
       border: none;
-      width: 410px;
+      max-width: 410px;
       cursor: pointer;
+      @media screen and (max-width: 500px) {
+        margin-top: 331px;
+      }
     }
   }
 
@@ -69,8 +103,9 @@
     font-size: 13px;
     line-height: 16px;
     text-align: center;
-    width: 410px;
+    max-width: 410px;
     cursor: pointer;
     text-decoration: none;
+    margin-bottom: 40px;
   }
 }
