--- a/src/pages/Saved/Saved.scss
+++ b/src/pages/Saved/Saved.scss
@@ -1,12 +1,30 @@
+@import '../../utils/variables.scss', '../../utils/mixins.scss';
+
 .saved {
   padding: 14px 0 140px 0;
   &__inner {
     max-width: 1140px;
     margin: 0 auto;
+    padding: 0 70px;
+    @include inner-media-main(30px);
+    @include inner-media-main(10px, 600px);
   }
 
   &__container {
-    display: flex;
-    column-gap: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+    column-gap: 30px;
+    border-top: 1px solid $color-light-grey;
+    padding-top: 80px;
+
+    @media screen and (max-width: 900px) {
+      margin: 109px 0 0;
+    }
+
+    @media screen and (max-width: 600px) {
+      margin: 0;
+      padding-top: 50px;
+      row-gap: 34px;
+    }
   }
 }
