--- a/src/components/Films/Form/Form.scss
+++ b/src/components/Films/Form/Form.scss
@@ -3,6 +3,20 @@
 .search {
   background-color: $color-white;
 
+  &__error {
+    min-height: 12px;
+    margin-top: 10px;
+    @include font-normal($small, $color-red);
+    font-size: 10px;
+    line-height: 12px;
+    opacity: 0;
+    transition: all 0.4s ease;
+
+    &_active {
+      opacity: 1;
+    }
+  }
+
   &__wrapper {
     display: flex;
     position: absolute;
@@ -17,7 +31,7 @@
 
   &__inner {
     margin: 0 auto;
-    padding: 70px;
+    padding: 70px 70px 58px 70px;
     max-width: 1140px;
 
     @media screen and (max-width: 900px) {
@@ -45,6 +59,11 @@
     margin: 0;
     border: none;
     padding: 0 0 0 61px;
+    transition: box-shadow 0.3s ease;
+
+    &:focus {
+      box-shadow: $color-c 10px 10px 40px 20px;
+    }
 
     @media screen and (max-width: 600px) {
       padding: 0 0 0 19px;
@@ -79,6 +98,12 @@
     background-image: url('./searchbtn.svg');
     background-position: center;
     background-repeat: no-repeat;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+
+    &:hover {
+      background-color: $color-pink;
+    }
 
     @media screen and (max-width: 600px) {
       right: 19px;
