--- a/src/components/Main/AboutProject/AboutProject.scss
+++ b/src/components/Main/AboutProject/AboutProject.scss
@@ -87,7 +87,7 @@
     max-width: 912px;
     display: flex;
     height: 36px;
-    background-color: $color-pink;
+    background-color: $color-prewhite;
     justify-content: center;
     align-items: center;
     margin: 0;
