--- a/src/components/Main/NavTab/NavTab.scss
+++ b/src/components/Main/NavTab/NavTab.scss
@@ -22,7 +22,8 @@
     align-items: center;
     text-decoration: underline;
     background-color: transparent;
-    padding: 24px 0;
+    padding: 0;
+    margin: 25px 0;
 
     &:hover {
       cursor: pointer;
