--- a/src/pages/Register/Register.scss
+++ b/src/pages/Register/Register.scss
@@ -62,6 +62,11 @@
       border-radius: 8px;
       height: 46px;
       padding-left: 15px;
+      transition: box-shadow 0.3s ease;
+
+      &:focus {
+        box-shadow: $color-c 10px 10px 30px 10px;
+      }
     }
 
     &__error {
