--- a/src/pages/Saved/Saved.scss
+++ b/src/pages/Saved/Saved.scss
@@ -1,7 +1,7 @@
 @import '../../utils/variables.scss', '../../utils/mixins.scss';
 
 .saved {
-  padding: 14px 0 140px 0;
+  padding: 0 0 140px 0;
   &__inner {
     max-width: 1140px;
     margin: 0 auto;
@@ -13,9 +13,10 @@
   &__container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
-    column-gap: 30px;
+    column-gap: 20px;
     border-top: 1px solid $color-light-grey;
-    padding-top: 80px;
+    padding: 80px 0 0;
+    margin: 0;
 
     @media screen and (max-width: 900px) {
       margin: 109px 0 0;
