--- a/src/components/Films/Card/Card.scss
+++ b/src/components/Films/Card/Card.scss
@@ -18,15 +18,7 @@
   }
 
   &__like {
-    width: 24px;
-    height: 24px;
-    background-color: $color-f9;
-    border-radius: 36px;
-    border: none;
     background-image: url('./like.svg');
-    background-repeat: no-repeat;
-    background-position: center;
-    cursor: pointer;
     transition: transform 0.3s ease;
 
     &:hover {
@@ -35,7 +27,23 @@
 
     &_active {
       background-image: url('./likeActive.svg');
+      cursor: default;
     }
+  }
+
+  &__btn {
+    width: 24px;
+    height: 24px;
+    background-color: $color-f9;
+    border-radius: 36px;
+    border: none;
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
+  }
+
+  &__delete {
+    background-image: url('./delete.svg');
   }
 
   &__description {
