--- a/src/pages/Profile/Profile.scss
+++ b/src/pages/Profile/Profile.scss
@@ -107,5 +107,7 @@
     cursor: pointer;
     text-decoration: none;
     margin-bottom: 40px;
+    background-color: transparent;
+    border: none;
   }
 }
