--- a/src/components/Films/Form/Form.scss
+++ b/src/components/Films/Form/Form.scss
@@ -101,6 +101,15 @@
     cursor: pointer;
     transition: background-color 0.2s ease;
 
+    &:disabled {
+      opacity: 0.2;
+
+      &:hover {
+        background-color: $color-black;
+        cursor: default;
+      }
+    }
+
     &:hover {
       background-color: $color-pink;
     }
