--- a/src/components/Loaders/BigLoader.scss
+++ b/src/components/Loaders/BigLoader.scss
@@ -14,14 +14,9 @@
   background-position: center;
   width: 150px;
   height: 150px;
-  /*   width: 120px;
-  height: 120px; */
   border-radius: 50%;
-  margin: 0px auto;
-  top: 50%;
-  left: 50%;
   display: flex;
+  justify-self: center;
+  align-self: center;
   animation: spinner-circle 0.7s ease-in infinite;
-  /* box-shadow: inset 0 0 0 4px orchid; */
-  /* clip: rect(0, 120px, 120px, 0.5em); */
 }
